# vla_project

./: .gitignore  CROSS_PLATFORM_GUIDE.md  DLIMP_COMPATIBILITY_REPORT.md  README.md  VSCODE_SETUP_GUIDE.md  main.py  profile_test.py  pyproject.toml  pyrightconfig.json  test_converted_functions.py  test_cross_platform.py  test_dlimp_compatibility.py  test_dlimp_simple.py  test_vscode_integration.py  train.sh
scripts/: preprocess.py  pretrain.py  train.py
src/vla_project/action_model/: __init__.py  actionmodel.py  adaptive_ensemble.py  diffusion_utils.py  gaussian_diffusion.py  models.py  readme.md  respace.py  timestep_sampler.py
src/vla_project/config/: __init__.py  dataset_cfg.py  model_cfg.py  vla_cfg.py
src/vla_project/models/: __init__.py  load.py  materialize.py  registry.py  smolvla.py
src/vla_project/models/backbones/: __init__.py
src/vla_project/models/vla/: __init__.py  (+2 more)
src/vla_project/overwatch/: __init__.py  overwatch.py
src/vla_project/policy/: __init__.py  cogactvla.py  load.py  openvla.py  registry.py
src/vla_project/preprocessing/: __init__.py  download.py  materialize.py
src/vla_project/training/: __init__.py  materialize.py  metrics.py
src/vla_project/utils/: __init__.py  batching_utils.py  data_utils.py  embedding.py  nn_utils.py  torch_utilis.py
tests/: test_action_model.py  test_action_model_comprehensive.py  test_action_tokenizer.py  test_diffusion_processes.py  test_diffusion_utilities.py  test_dinov2_vit.py  test_dinov2_vit_fixed.py  test_dit_models.py  test_prompters.py  test_timestep_sampling.py  test_transformer.py
(+33 files in other folders)
