[project]
name = "vla-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "draccus>=0.11.5",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "jsonlines>=4.0.0",
    "num2words>=0.5.14",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "wandb>=0.21.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_project"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
lint = [
    "ruff>=0.12.12",
]
local = [
    "dlimp @ file:///d:/learningSomething/casualCode/casualPython/uv_projects/vla_project/third_party/dlimp",
]

[tool.ruff]
line-length = 120
target-version = "py313"
select = [
  "ALL",
]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722",
    "D100",
    "PLR0913",
    "ERA001"
]

